--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,13 @@
 .feedback {
   margin-left: 25px;
 }
+
+.btns {
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.btn:not(:last-child) {
+  margin-right: 5px;
+  cursor: pointer;
+}
